--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.organization=aldakin-webapp-partes
-sonar.projectKey=aldakin-webapp-partes
+sonar.organization=aldakin
+sonar.projectKey=Aldakin_AppPartesWebGit
 
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/ 
