--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.organization=aldakin
-sonar.projectKey=Aldakin_AppPartesWebGit
+sonar.projectKey=web-partes
 sonar.host.url=https://sonarcloud.io
 
 # relative paths to source directories. More details and properties are described
