fix reference error

--- a/src/AppPartes.Web/AppPartes.Web.csproj
+++ b/src/AppPartes.Web/AppPartes.Web.csproj
@@ -29,7 +29,7 @@
 
 
   <ItemGroup>
-    <ProjectReference Include="..\..\AppPartes.Logic\AppPartes.Logic.csproj" />
+    <ProjectReference Include="..\AppPartes.Logic\AppPartes.Logic.csproj" />
     <ProjectReference Include="..\AppPartes.Data\AppPartes.Data.csproj" />
   </ItemGroup>
 
