--- a/src/AppPartes.Logic/AppPartes.Logic.csproj
+++ b/src/AppPartes.Logic/AppPartes.Logic.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\AppPartes.Data\AppPartes.Data.csproj" />
+    <ProjectReference Include="..\AppPartes.Data\AppPartes.Data.csproj" />
   </ItemGroup>
 
 </Project>
