--- a/test/AppPartes.IntegrationTests/AppPartes.IntegrationTests.csproj
+++ b/test/AppPartes.IntegrationTests/AppPartes.IntegrationTests.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="3.1.3" />
+    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="3.1.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\src\AppPartes.Web\AppPartes.Web.csproj" />
   </ItemGroup>
 
