--- a/src/AppPartes.Logic/AppPartes.Logic.csproj
+++ b/src/AppPartes.Logic/AppPartes.Logic.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.Identity.Core" Version="2.2.3" />
+    <PackageReference Include="Microsoft.AspNet.Identity.EntityFramework" Version="2.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\AppPartes.Data\AppPartes.Data.csproj" />
   </ItemGroup>
 
