primera fase del proyecto completa a falta de test de integracion

--- a/test/AppPartes.IntegrationTests/AppPartes.IntegrationTests.csproj
+++ b/test/AppPartes.IntegrationTests/AppPartes.IntegrationTests.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\..\src\AppPartes.Web\AppPartes.Web.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Moq" Version="4.14.1" />
+  </ItemGroup>
+
 </Project>
