actualizacion sin cambios

--- a/test/AppPartes.IntegrationTests/AppPartes.IntegrationTests.csproj
+++ b/test/AppPartes.IntegrationTests/AppPartes.IntegrationTests.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\AppPartes.Logic\AppPartes.Logic.csproj" />
     <ProjectReference Include="..\..\src\AppPartes.Web\AppPartes.Web.csproj" />
   </ItemGroup>
 
