--- a/src/AppPartes.Web/AppPartes.Web.csproj
+++ b/src/AppPartes.Web/AppPartes.Web.csproj
@@ -18,6 +18,7 @@
 
 
   <ItemGroup>
+    <PackageReference Include="EPPlus" Version="5.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.4" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.4" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.4" />
